# PPM-image-processing

./: CMakeLists.txt  LICENSE  README.md
src/: PPM2Gray.cpp  filterPPM.cpp  image.cpp  img.cpp  img.hpp  main.cpp  readPPMFile.cpp  rgb.cpp  rgb.hpp
